gcc/testsuite/rust/rustc/ui/unused/unused-macro-with-bad-frag-spec.rs
#![allow(unused_macros)]

// Issue #21370

macro_rules! test {
    ($wrong:t_ty) => () // { dg-error "" "" { target *-*-* } }
}

fn main() { }

